--- a/AndroidStudioProjects/VisitSeattle/app/src/main/AndroidManifest.xml
+++ b/AndroidStudioProjects/VisitSeattle/app/src/main/AndroidManifest.xml
@@ -16,19 +16,49 @@
         </activity>
         <activity
             android:name=".HotelsActivity"
-            android:label="@string/category_hotels"/>
+            android:label="@string/category_hotels"
+            android:parentActivityName=".MainActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".RestaurantsActivity"
-            android:label="@string/category_restaurants" />
+            android:label="@string/category_restaurants"
+            android:parentActivityName=".MainActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".MuseumsActivity"
-            android:label="@string/category_museums" />
+            android:label="@string/category_museums"
+            android:parentActivityName=".MainActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".MallsActivity"
-            android:label="@string/category_malls" />
+            android:label="@string/category_malls"
+            android:parentActivityName=".MainActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
         <activity
             android:name=".GardensActivity"
-            android:label="@string/category_gardens" />
+            android:label="@string/category_gardens"
+            android:parentActivityName=".MainActivity">
+            <!-- Parent activity meta-data to support 4.0 and lower -->
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
     </application>
 
 </manifest>
